--- a/spsi_external_layout_background/views/external_layout_background_view.xml
+++ b/spsi_external_layout_background/views/external_layout_background_view.xml
@@ -1,5 +1,13 @@
 <odoo>
     <data>
+        <!-- Adds all assets in Odoo -->
+        <template id="assets_backend" name="spsi_external_layout_background assets" inherit_id="web.assets_backend">
+            <xpath expr="." position="inside">
+                <!-- All links to CSS and JS files should be added in here. -->
+                <!-- <script type="text/javascript" src="/spsi_external_layout_background/static/src/js/pos_image_field.js"></script> -->
+                <link rel="stylesheet" type="text/css" href="/spsi_external_layout_background/static/src/scss/layout_background.scss">
+            </xpath>
+        </template>
         <!-- <template id="listing"> -->
         <!--   <ul> -->
         <!--     <li t-foreach="objects" t-as="object"> -->
