--- a/spsi_external_layout_background/views/external_layout_background_view.xml
+++ b/spsi_external_layout_background/views/external_layout_background_view.xml
@@ -5,26 +5,8 @@
             <xpath expr="." position="inside">
                 <!-- All links to CSS and JS files should be added in here. -->
                 <!-- <script type="text/javascript" src="/spsi_external_layout_background/static/src/js/pos_image_field.js"></script> -->
-                <link rel="stylesheet" type="text/css" href="/spsi_external_layout_background/static/src/scss/layout_background.scss">
+                <link rel="stylesheet" type="text/css" href="/spsi_external_layout_background/static/src/scss/layout_background.scss"/>
             </xpath>
         </template>
-        <!-- <template id="listing"> -->
-        <!--   <ul> -->
-        <!--     <li t-foreach="objects" t-as="object"> -->
-        <!--       <a t-attf-href="#{ root }/objects/#{ object.id }"> -->
-        <!--         <t t-esc="object.display_name"/> -->
-        <!--       </a> -->
-        <!--     </li> -->
-        <!--   </ul> -->
-        <!-- </template> -->
-        <!-- <template id="object"> -->
-        <!--   <h1><t t-esc="object.display_name"/></h1> -->
-        <!--   <dl> -->
-        <!--     <t t-foreach="object._fields" t-as="field"> -->
-        <!--       <dt><t t-esc="field"/></dt> -->
-        <!--       <dd><t t-esc="object[field]"/></dd> -->
-        <!--     </t> -->
-        <!--   </dl> -->
-        <!-- </template> -->
     </data>
 </odoo>
