--- a/tis_catch_weight/report/report_invoice.xml
+++ b/tis_catch_weight/report/report_invoice.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 	<template id="report_invoice_catchweight" inherit_id="account.report_invoice_document">
-		<xpath expr="//table/thead/tr/th[5]" position="after">
-			<th class="text-right" groups="tis_catch_weight.group_catch_weight">CW QTY</th>	
+		<xpath expr="//table/thead/tr/th[2]" position="after">
+			<th class="text-right" groups="tis_catch_weight.group_catch_weight">Quantity</th>
 		</xpath>
-		<xpath expr="//table[@name='invoice_line_table']/tbody/t[2]/tr/t/td[5]" position="after">
+		<xpath expr="//table[@name='invoice_line_table']/tbody/t[2]/tr/t/td[2]" position="after">
 			<td class="text-right" groups="tis_catch_weight.group_catch_weight">
 				<span t-field="line.product_cw_uom_qty"/>
-                <span t-field="line.product_cw_uom"/>
+                <!-- <span t-field="line.product_cw_uom"/> -->
 			</td>
 		</xpath>
 		<!--<xpath expr="//table/tbody/tr[2]/td[4]" position="after">-->
