--- a/tis_catch_weight/report/sale_report_template.xml
+++ b/tis_catch_weight/report/sale_report_template.xml
@@ -7,7 +7,7 @@
 		<xpath expr="//table[1]/tbody/t[2]/tr/t/td[2]" position="after">
 			<td class="text-right" groups="tis_catch_weight.group_catch_weight">
 				<span t-field="line.product_cw_uom_qty"/>
-                <!-- <span t-field="line.product_cw_uom"/> -->
+                <span t-field="line.product_cw_uom"/>
 			</td>
 		</xpath>
 	</template>
