--- a/gst_sale_order_mrp/views/sale_view.xml
+++ b/gst_sale_order_mrp/views/sale_view.xml
@@ -7,7 +7,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
                 <field name="bom_ids" invisible="1"/>
-                <field name="bom_id" groups="mrp.group_mrp_user" domain="[('id', 'in', bom_ids[0][2])]"/>
+                <field name="bom_id" groups="mrp.group_mrp_user" domain="[('id', 'in', bom_ids)]"/>
             </xpath>
             <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="after">
                 <field name="bom_ids" invisible="1"/>
